force-app/main/default/objects/DM_Due_Payment__c/DM_Due_Payment__c.object-meta.xml
<CustomObject>
    <label>DM Due Payment</label>
    <nameField>
        <label>DM Due Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Due Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>