force-app/main/default/objects/DM_Due_Payment__c/fields/DM_Archived__c.field-meta.xml
<CustomField>
    <fullName>DM_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Archive</label>
    <type>Checkbox</type>
</CustomField>