force-app/main/default/objects/DM_Due_Payment__c/fields/DM_Due__c.field-meta.xml
<CustomField>
    <fullName>DM_Due__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Due</label>
    <referenceTo>DM_Bill__c</referenceTo>
    <relationshipLabel>DM Due Payments</relationshipLabel>
    <relationshipName>DM_Due_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>