force-app/main/default/objects/DM_Due_Payment__c/fields/DM_Fees__c.field-meta.xml
<CustomField>
    <fullName>DM_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>