force-app/main/default/objects/DM_Due_Payment__c/fields/DM_Loan_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Loan Payment Transaction</label>
    <referenceTo>DM_Loan_Payment_Transaction__c</referenceTo>
    <relationshipLabel>DM Due Payments</relationshipLabel>
    <relationshipName>DM_Due_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>