force-app/main/default/objects/DM_Due_Payment__c/fields/DM_TDS__c.field-meta.xml
<CustomField>
    <fullName>DM_TDS__c</fullName>
    <label>DM TDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>